--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,15 +23,19 @@
     font-size: 20px;
     font-weight: bold;
     color: white;
+    cursor: pointer;
 }
 
 /* main style  */
 header{
     background-color: #FFF8F3;
+    background: url("../images/developer.png"), url("../images/header_bg.png"), #FFF8F3;
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
     padding-top: 50px;
 }
 nav{
-    width: 71%;
+    width: 70%;
     max-width: 1140px;
     /* border: 1px solid red; */
     margin: 0 auto;
@@ -49,4 +53,36 @@ nav .menu a {
     font-size: 20px;
     color: #474747;
     text-decoration: none;
+}
+#banner {
+    /* border: 1px solid red; */
+    margin: 47px 38px 0px 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#banner .banner-content{
+    max-width: 585px;
+}
+#banner .banner-content h2 {
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5px;
+}
+#banner .banner-content h1 {
+    font-size: 85px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+#banner .banner-content p {
+    font-size: 18px;
+    color: #757575;
+    line-height:30px;
+    margin-bottom: 30px;
+}
+#banner .banner-image img {
+    max-width: 585px;
+    vertical-align: middle;
 }
