--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,12 +25,27 @@
     color: white;
     cursor: pointer;
 }
+.section-heading {
+    max-width: 827px;
+    text-align: center;
+
+}
+.section-heading h2 {
+    font-size: 35px;
+    margin-bottom: 30px;
+}
+.section-heading p {
+    font-size: 18px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+}
 
 /* main style  */
 header{
     background-color: #FFF8F3;
     background: url("../images/developer.png"), url("../images/header_bg.png"), #FFF8F3;
-    background-position: top left, bottom right;
+    background-position: center left, bottom right;
     background-repeat: no-repeat;
     padding-top: 50px;
 }
@@ -85,4 +100,29 @@ nav .menu a {
 #banner .banner-image img {
     max-width: 585px;
     vertical-align: middle;
+}
+#about {
+    padding-top: 130px;
+}
+#about .about-container {
+    width: 70%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 156px;
+}
+#about .about-container .about-info {
+    display: flex;
+    justify-content: space-around;
+}
+.about-info .info-card p {
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+.about-info .info-card h4 {
+    font-size: 20px;
+    line-height: 30px;
+    color: #474747;
 }
