--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,7 +48,8 @@
 header{
     background-color: #FFF8F3;
     background: url("../images/developer.png"), url("../images/header_bg.png"), #FFF8F3;
-    background-position: center left, bottom right;
+    /* background-position: center left, bottom right; */
+    background-position: 23px 38px, bottom right;
     background-repeat: no-repeat;
     padding-top: 50px;
 }
